tests/http/snapshots/http__v2__unknown_route.snap
---
source: tests/http/v2.rs
expression: "get(\"/api/v2/nonexistent\").send().await"
---
GET /api/v2/nonexistent
status: 404 Not Found
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
